// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate (--rule-list-split) by nested property meta.docs.category splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

### candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

### fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) by type splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-biz](docs/rules/no-biz.md) |

### problem

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

### suggestion

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |
| [no-baz](docs/rules/no-baz.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) ignores case splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

### a

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

### B

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

### c

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with boolean splits the list 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💡 Manually fixable by [editor suggestions](https://eslint.org/docs/developer-guide/working-with-rules#providing-suggestions).

| Name                           | 💡 |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |
| [no-baz](docs/rules/no-baz.md) |    |

### Has Suggestions

| Name                           | 💡 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | 💡 |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with no existing headers in file uses the proper sub-list header level 1`] = `
"<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

# candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

# fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--rule-list-split) with one sub-list having no rules enabled by the config splits the list and still uses recommended config emoji in both lists 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

### bar

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-bar](docs/rules/no-bar.md) |    |

### foo

| Name                           | 💼 |
| :----------------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (--rule-list-split) with only a title in the rules file uses the proper sub-list header level 1`] = `
"# Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-baz](docs/rules/no-baz.md) |

## candy

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

## fruits

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

<!-- end auto-generated rules list -->"
`;

exports[`generate (--rule-list-split) with unknown variable type splits the list but does not attempt to convert variable name to title 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

| Name                           |
| :----------------------------- |
| [no-foo](docs/rules/no-foo.md) |

### foo_barBIZ-baz3bOz

| Name                           |
| :----------------------------- |
| [no-bar](docs/rules/no-bar.md) |

<!-- end auto-generated rules list -->
"
`;
